# trainings

./: .gitignore  README.md  merge.py
.github/workflows/: build-pdfs.yml  build-prez.yml  merge-sources-files.yml  release-pdfs.yml
_site/: index.html
git-advanced/exercices/1 - rewriting-history/: README.md
git-advanced/exercices/2 - merges/: README.md
git-advanced/exercices/3 - stash-cherry-pick/: README.md
git-advanced/exercices/4 - hooks/: README.md  pre-commit.hook
git-advanced/exercices/5 - remotes/: README.md
git-advanced/presentation/: config.json  exercises.md  frontmatter.md  start.sh
git-advanced/presentation/content/: 0-intro.md  1-objects.md  2-working-locally.md  3-remotes.md  prez.md
gitlab-ci/: README.md
gitlab-ci/exercises/exercise-01/: README.md
gitlab-ci/exercises/exercise-02/: .gitignore  README.md
gitlab-ci/exercises/exercise-03/: README.md
gitlab-ci/exercises/exercise-04/: README.md
gitlab-ci/exercises/exercise-05/: README.md
gitlab-ci/exercises/exercise-06/: README.md
gitlab-ci/exercises/exercise-07/: README.md
gitlab-ci/exercises/exercise-08/: .gitlab-ci-solution.yml  README.md
gitlab-ci/exercises/exercise-09/: .gitignore  .gitlab-ci-solution.yml  README.md
gitlab-ci/exercises/exercise-10/: .gitlab-ci-solution.yml  README.md
gitlab-ci/exercises/exercise-11/: .gitlab-ci-solution.yml  README.md
gitlab-ci/exercises/exercise-12/: .gitlab-ci-solution.yml  README.md  (+1 more)
gitlab-ci/presentation/: config.json
tools/: cli.py  pyproject.toml
tools/merge/: pyproject.toml
tools/templates/: index.html.j2
(+23 files in other folders)
